--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #F0F8FF'
+}
+
 .grid-container {
     display: grid;
     grid-gap: 1%;
